--- a/styles/home-styles.css
+++ b/styles/home-styles.css
@@ -13,7 +13,7 @@ header{
 }
 
 .nav-bar {
-  background-color: #FFEB02;
+  background-color: #FF9927;
   height: 80px;
   padding-left: 8%;
   padding-right: 8%;
