--- a/styles/aboutus-styles.css
+++ b/styles/aboutus-styles.css
@@ -9,16 +9,16 @@ body {
 }
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 header{
-    display: inline;
+  display: inline;
 }
 
 .nav-bar {
-  background-color: #FFEB02;
+  background-color: #FF9927;
   height: 80px;
   padding-left: 8%;
   padding-right: 8%;
@@ -243,17 +243,17 @@ button {
   }
 }
 
-.container {
-  margin-top: 20px;
-}
-
 .banner {
   background: #FEF2CA;
-  padding: 30px;
+  padding: 32px;
   text-align: center;
   line-height: 42px;
   letter-spacing: 0em;
   font-size: 20px;
+}
+
+.history {
+  margin-top: 28px;
 }
 
 .history p {
@@ -290,7 +290,7 @@ button {
 }
 
 .carousel-item img {
-width: 700px;
+width: 760px;
 height: 500px;
 }
 
@@ -353,70 +353,42 @@ height: 500px;
   padding-bottom: 30px;
 }
 
-@media screen and (max-width: 480px) {
-      .history p {
-        width: 100%;
-        font-size: 16px;
-      }
-
-      .carousel-container {
-        width: 100%;
-      }
-
-      .carousel-item img {
-        width: 100%;
-        height: auto;
-      }
-    }
-
-    @media screen and (max-width: 420px) {
+    @media screen and (max-width: 1000px ) {
       .container {
-        padding: 20px;
-      }
-
-      .history p {
-        width: 100%;
-        font-size: 14px;
-      }
-
-      .carousel-container {
-        width: 100%;
-      }
-
-      .carousel-item img {
-        width: 100%;
-        height: 400px;
-        background-size: cover;
-      }
-
-      .banner h1 {
-         font-size: 25px;
-        margin: 0;
         padding: 30px;
       }
 
-      .carousel-nav {
-        font-size: 50px;
-      }
-    }
-
-    @media screen and (max-width: 1000px ) {
-      .container {
-        padding: 20px;
-      }
-
       .history p {
         width: 100%;
-        font-size: 14px;
+        font-size: 30px;
       }
+	  
+	  .text p{
+		  font-size: 40px;
+		   width: 85%;
+	  }
+	  
+	  .text h2{
+		  font-size: 40px;
+		  margin-top: 550px;
+	  }
+	  
+	  .gridimage{
+	grid-column: 1;
+	width: 900px;
+
+}
+
 
       .carousel-container {
         width: 100%;
+		padding: 5px;
       }
 
       .carousel-item img {
-        width: 100%;
-        height: 600px;
+        width: 33%;
+        height: 25%;
+		
         
       }
 
@@ -429,4 +401,12 @@ height: 500px;
       .carousel-nav {
         font-size: 50px;
       }
+	  
+	  .carousel-nav.left {
+	  left: 10px;
+	}
+
+	.carousel-nav.right {
+	  right: 30px;
+	}
     }
