--- a/styles/menu-styles.css
+++ b/styles/menu-styles.css
@@ -18,7 +18,7 @@ body {
 }
 
 .nav-bar {
-    background-color: #FFEB02;
+    background-color: #FF9927;
     height: 80px;
     padding-left: 8%;
     padding-right: 8%;
