--- a/styles/aboutus-styles.css
+++ b/styles/aboutus-styles.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&display=swap');
 
-html,
-body {
-  font-family: 'EB Garamond', serif;
-  background: #FFF260;
-  margin: 0;
-  padding: 0;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -15,6 +7,14 @@ body {
 
 header{
   display: inline;
+}
+
+html,
+body {
+  font-family: 'EB Garamond', serif;
+  background: #FFF260;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-bar {
@@ -252,10 +252,6 @@ button {
   font-size: 20px;
 }
 
-.history {
-  margin-top: 28px;
-}
-
 .history p {
   width: 50%;
   text-align: justify;
@@ -266,35 +262,36 @@ button {
 .history h2 {
   font-size: 30px;
   color: red;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
-.carousel-container {
+/* .carousel-container {
   position: relative;
   width: 50%;
   height: 100%;
   overflow: hidden;
   margin: 0 auto;
-}
+} */
 
-.carousel-slide {
+/* .carousel-slide {
   display: flex;
   width: 300%;
   height: 100%;
   transition: transform 0.5s ease-in-out;
-}
+} */
 
-.carousel-item {
+/* .carousel-item {
   flex: 1 0 100%;
   height: 100%;
 }
 
 .carousel-item img {
-width: 760px;
-height: 500px;
-}
+  width: 760px;
+  height: 500px;
+} */
 
-.carousel-nav {
+/* .carousel-nav {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -306,33 +303,33 @@ height: 500px;
   line-height: 30px;
   font-size: 100px;
   cursor: pointer;
-}
+} */
 
-.carousel-nav.left {
+/* .carousel-nav.left {
   left: 10px;
 }
 
 .carousel-nav.right {
   right: 10px;
-}
+} */
 
-.grid{
+.grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
   align-content: center;
 }
 
-.text{
+.text {
   grid-column: 1;
   position: absolute;
   padding-left: 100px;
-  font-family: 'Garamond';
+  font-family: 'EB Garamond', serif;
   font-style: normal;
   color: #000000;
 }
 
-.text h2{
+.text h2 {
   width: 305.18px;
   height: 45px;
   top: 1333px;
@@ -340,73 +337,223 @@ height: 500px;
   line-height: 45px;
 }
 
-.text p{
+.text p {
   width: 50%;
   font-size: 20px;
   line-height: 140.62%;
   text-align: justify;
 }
 
-.gridimage{
+.gridimage {
   grid-column: 2;
   padding-left: 100px;
   padding-bottom: 30px;
 }
 
-    @media screen and (max-width: 1000px ) {
-      .container {
-        padding: 30px;
-      }
 
-      .history p {
-        width: 100%;
-        font-size: 30px;
-      }
-	  
-	  .text p{
-		  font-size: 40px;
-		   width: 85%;
-	  }
-	  
-	  .text h2{
-		  font-size: 40px;
-		  margin-top: 550px;
-	  }
-	  
-	  .gridimage{
-	grid-column: 1;
-	width: 900px;
-
+.carousel-dots {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
 }
 
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0 5px;
+  cursor: pointer;
+}
 
-      .carousel-container {
-        width: 100%;
-		padding: 5px;
-      }
+.active-dot {
+  background-color: #555;
+}
 
-      .carousel-item img {
-        width: 33%;
-        height: 25%;
-		
-        
-      }
+/* New */
+.wrapper {
+  display: flex;
+  max-width: 50%;
+  width: 100%;
+  height: 400px;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+}
 
-      .banner h1 {
-        font-size: 25px;
-        margin: 0;
-        padding: 30px;
-      }
+.body2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-      .carousel-nav {
-        font-size: 50px;
-      }
-	  
-	  .carousel-nav.left {
-	  left: 10px;
-	}
+.image-container {
+  height: 400px;
+  max-width: 500px;
+  width: fit-content;
+  overflow: hidden;
+}
 
-	.carousel-nav.right {
-	  right: 30px;
-	}
-    }
+.image-container .carousel {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  transition: all 0.4s ease;
+}
+
+.carousel img {
+  height: 100%;
+  width: 100%;
+  /* border-radius: 18px; */
+  /* border: 10px solid #fff; */
+  object-fit: cover;
+}
+
+.wrapper span.button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 50px;
+  width: 50px;
+  /* background-color: #333; */
+  /* border-radius: 50%; */
+  text-align: center;
+  line-height: 36px;
+  color: #333;
+  font-size: 100px;
+  transition: all 0.3s linear;
+  /* z-index: 100; */
+  cursor: pointer;
+}
+
+span.button:active {
+  transform: scale(0.94) translateY(-50%);
+}
+
+span#prev {
+  left: 1vw;
+}
+
+span#next {
+  right: 1vw;
+}
+
+@media screen and (max-width: 1000px) {
+  .container {
+    padding: 30px;
+  }
+
+  .history p {
+    width: 100%;
+    font-size: 30px;
+  }
+
+  .text p {
+    font-size: 40px;
+    width: 85%;
+  }
+
+  .text h2 {
+    font-size: 40px;
+    margin-top: 550px;
+  }
+
+  .gridimage {
+    grid-column: 1;
+    width: 800px;
+
+  }
+
+  .wrapper {
+    display: flex;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    max-width: 100%;
+    width: 700px;
+    height: 400px;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+  }
+
+  .dot {
+    height: 30px;
+    width: 30px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    margin: 0 20px;
+    cursor: pointer;
+  }
+
+  .active-dot {
+    background-color: #555;
+  }
+
+  .wrapper span.button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 80px;
+    width: 80px;
+    padding-top: 20px;
+    /* background-color: #333; */
+    /* border-radius: 50%; */
+    text-align: center;
+    line-height: 36px;
+    color: #333;
+    font-size: 100px;
+    transition: all 0.3s linear;
+    /* z-index: 100; */
+    cursor: pointer;
+  }
+
+  /* .carousel-container {
+    width: 100%;
+
+  } */
+
+  .image-container {
+    height: 550px;
+    width: fit-content;
+    max-width: 700px;
+    /* width: fit-content; */
+    overflow: hidden;
+  }
+
+  .image-container .carousel {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    transition: all 0.4s ease;
+  }
+
+  .carousel img {
+    /* height: 100%; */
+    /* width: 150%; */
+    /* border-radius: 18px; */
+    /* border: 10px solid #fff; */
+    object-fit: cover;
+  }
+
+  .banner h1 {
+    font-size: 25px;
+    margin: 0;
+    padding: 30px;
+  }
+
+  /* /* .carousel-nav {
+    font-size: 50px;
+  } */
+
+  span#prev {
+    left: -100px;
+  }
+
+  span#next {
+    right: -100px;
+  }
+}
