--- a/styles/menu-styles.css
+++ b/styles/menu-styles.css
@@ -3,6 +3,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 header{
@@ -301,6 +302,7 @@ button {
 .menu-grid .menu {
     position: relative;
     width: 230px;
+    margin: 0 auto;
 }
 
 .not-found-message {
@@ -423,3 +425,187 @@ button {
     padding-right: 0 16px;
     align-items: center;
 }
+
+@media screen and (max-width: 1328px) {
+    .menu-header h1 {
+        padding: 0 260px;
+        font-size: 48px;
+    }
+}
+
+@media screen and (max-width: 1215px) {
+    .menu-header h1 {
+        padding: 0 200px;
+        font-size: 40px;
+    }
+    .container {
+        flex-direction: column;
+    }
+    .filter-section {
+        margin-bottom: 25px;
+    }
+}
+
+@media screen and (max-width: 1053px) {
+    .menu-header h1 {
+        padding: 0 70px;
+        font-size: 36px;
+    }
+    .menu-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 985px) {
+    .search-container {
+        margin-left: 250px;
+        margin-right: 250px;
+    }
+    .search-bar {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 985px) {
+    .search-container {
+        margin-left: 250px;
+        margin-right: 250px;
+    }
+    .search-bar {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .menu-header h1 {
+        padding: 35px 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .menu-header img {
+        display: none;
+    }   
+    .search-container {
+        margin-left: 180px;
+        margin-right: 180px;
+    }
+    .search-bar {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 585px) {
+    .search-container {
+        margin-left: 90px;
+        margin-right: 90px;
+    }
+    .search-bar {
+        width: 70%;
+    }
+}
+
+.footer-container{
+	max-width: 1170px;
+	margin:auto;
+}
+.footer-row {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: flex-end;
+}
+
+.footer-col ul {
+	list-style: none;
+}
+
+.footer {
+	background-color: #FF9927;
+    padding: 70px 0;
+}
+.footer-col {
+   width: 25%;
+   padding: 0 15px;
+}
+.footer-col img {
+	width: 80%;
+	margin-left: 20px;
+}
+.footer-col h4{
+	font-size: 18px;
+	color: black;
+    letter-spacing: 1px;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 700;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:0;
+	bottom: -10px;
+	background-color: #FFEB02;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 18px;
+	text-transform: capitalize;
+	text-decoration: none;
+	font-weight: 500;
+	color: black;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	text-decoration: underline;
+}
+
+.footer-col .social-links a:hover{
+	color: #24262b;
+	background-color: #ffffff;
+}
+
+/*responsive*/
+@media screen and (max-width: 767px){
+  .footer-col{
+    width: 50%;
+    margin-bottom: 30px;
+	}
+}
+@media screen and (max-width: 574px){
+  .footer-col{
+    width: 100%;
+	}
+}
+
+.footer-line {
+	margin-top: 1.5rem;
+	margin-bottom: 1.5rem; 
+	border-color: #FFEB02; 
+	opacity: 0.8;
+}
+
+.footer-rights {
+    font-weight: 500;
+}
+
+@media screen and (max-width: 1195px){
+	.legal{
+        width: 80%;
+        margin: 0 auto;
+	}
+}
+  
+@media screen and (max-width: 824px){
+	.menu-grid{
+        grid-template-columns: repeat(1, 1fr);
+
+	}
+}
+  
